AUTOMAKE_OPTIONS = foreign

include_HEADERS =
hcaldatadir = $(pkgdatadir)/hcal

hcaldata_DATA = \
  testbeam_ihcal_template.root \
  testbeam_ohcal_template.root \
  OHCALMON_40747.root \
  OHCALMON_54117.root \
  OHCALMON_54145.root \
  OHCALMON_54373.root \
  OHCALMON_67963.root \
  OHCALMON_69238.root \
  OHCALMON_71597.root \
  OHCALMON_73834.root \
  OHCALMON_79152.root \
  OHCALMON_cosmic_45022_1000ADC.root \
  OHCALMON_cosmic_63461_1000ADC.root \
  IHCALMON_40747.root \
  IHCALMON_54117.root \
  IHCALMON_54145.root \
  IHCALMON_54373.root \
  IHCALMON_67963.root \
  IHCALMON_69238.root \
  IHCALMON_71597.root \
  IHCALMON_73834.root \
  IHCALMON_79152.root \
  IHCALMON_cosmic_45022_1000ADC.root \
  IHCALMON_cosmic_63461_1000ADC.root
